Bug 257955 - space between panel and kickoff with dual screen setup
Summary: space between panel and kickoff with dual screen setup
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-26 11:27 UTC by Gael Beaudoin
Modified: 2010-12-18 00:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
plasma-desktop-appletrc (4.70 KB, text/plain)
2010-11-26 11:31 UTC, Gael Beaudoin
Details
plasma-desktoprc (791 bytes, text/plain)
2010-11-26 11:32 UTC, Gael Beaudoin
Details
screenshot showing the problem. (53.36 KB, image/png)
2010-11-26 11:32 UTC, Gael Beaudoin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gael Beaudoin 2010-11-26 11:27:31 UTC
Version:           unspecified (using KDE 4.5.80) 
OS:                Linux

See the screen shot. It's ok with one screen, kickoff is at the perfect place. But not with a dual screen setup.

I'll attach my desktop config file. BTW, this was already the case with SC 4.5 at least.

Reproducible: Always
Comment 1 Gael Beaudoin 2010-11-26 11:28:38 UTC
The two screen resolutions are : 1280x1024 on the left and 1920x1080 on the right.
Comment 2 Gael Beaudoin 2010-11-26 11:31:55 UTC
Created attachment 53754 [details]
plasma-desktop-appletrc
Comment 3 Gael Beaudoin 2010-11-26 11:32:21 UTC
Created attachment 53755 [details]
plasma-desktoprc
Comment 4 Gael Beaudoin 2010-11-26 11:32:54 UTC
Created attachment 53756 [details]
screenshot showing the problem.
Comment 5 Marco Martin 2010-11-30 13:07:19 UTC
this is because the two monitors have a different size, known problem, not easy solution, but i'm still hoping
Comment 6 Gael Beaudoin 2010-11-30 14:06:04 UTC
It's not very annoying, just not pixel perfect :p
Thank you for the answer!
Comment 7 Aaron J. Seigo 2010-12-17 22:06:29 UTC
what kind of dual screen configuration do you have? xrandr? twinview? xinerama? multi-head (multiple x servers)?
Comment 8 Marco Martin 2010-12-17 23:37:55 UTC
SVN commit 1207416 by mart:

the dialog private is in its seprarate file ecause it gets accessed by popupapplet to set an applet pointer

in this way we can use the corona to actually find out the real desktop geometry, that doesn't fail for extended monitors like QDesktopWidget does.

BUG:257955


 M  +30 -87    dialog.cpp  
 M  +2 -1      dialog.h  
 M  +2 -0      popupapplet.cpp  
 A             private/dialog_p.h   [License: LGPL (v2.1+)]


WebSVN link: http://websvn.kde.org/?view=rev&revision=1207416
Comment 9 Gael Beaudoin 2010-12-18 00:22:05 UTC
I guess it's twinview, using NVIDIA proprietary drivers. I'll test with the next realease (RC1?) and report here. Thanks for the fix!