the dialog private is in its seprarate file ecause it gets accessed by popupapplet to set an applet pointer

in this way we can use the corona to actually find out the real desktop geometry, that doesn't fail for extended monitors like QDesktopWidget does.

BUG:257955

svn path=/trunk/KDE/kdelibs/; revision=1207416